--- a/index.html
+++ b/index.html
@@ -1,29 +1,11 @@
 <!DOCTYPE html>
-<html lang='en'>
-
+<html lang="en">
 <head>
-   <meta charset='UTF-8'>
-   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-   <title>Document</title>
-   <link rel='stylesheet' href='style.css'>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-
 <body>
-   <div class="header">
-    <div class="navbar">
-      
-    </div>
-   </div>
-   <div class = "main">
-     <div class="content">
-         <p>Scroll to see the navbar animation effect...</p>
-         <div style="height: 2000px;"></div>
-      </div>
-   </div>
-   <div class="footer">
-
-   </div>
-   <script src='navbar.js'></script>
+  
 </body>
-
 </html>
