--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
+  <div class="header">
+    <div class="navbar transform">
+      <ul>
+        <!-- <li><a href="">Hero Section</a></li> -->
+        <li><a href="">Projects</a></li>
+        <li><a href="">Skills</a></li>
+        <li><a href="">About Me</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="main">
+    <div class="blackbox">
+    </div>
+    <div class="intro">
+      <div class="editor">
+        <div>
+          <h1>Hey , I Am Gaurav.</h1>
+          <h1>Web Developer.</h1>
+        </div>
+        <div>
+          <h3>
+            Hey there! I'm Gaurav Soni, a frontend web developer passionate about building clean UIs and smooth user
+            experiences. I specialize in HTML, CSS, JavaScript, and love working with React.
+          </h3>
+        </div>
+
+      </div>
+    </div>
+    <div class="seapration"></div>
+    <div class="skills">
+    </div>
+    <div class="seapration"></div>
+    <div class="projects">
+    </div>
+    <div class="seapration"></div>
+    <div class="AboutMe">
+    </div>
+    <div class="seapration"></div>
+    <div class="Contact">
+    </div>
+    <div class="seapration"></div>
+  </div>
+
+  <div class="footer">
+
+  </div>
+
+  <script src="navbar.js"></script>
 </body>
+
 </html>
